[package]
name = "rebuild_feed_to_json"
version = "0.1.0"
authors = ["Masayuki Sunahara <tamanishi@gmail.com>"]
edition = "2018"

[dependencies]
lambda_runtime = "0.2.0"
serde = "1.0.89"
serde_json = "1.0.39"
serde_derive = "1.0.89"
log = "0.4.6"
simple_logger = "1.0.1"
rss = { version = "1.6.1", features = ["from_url"] }
scraper = "0.9.1"
chrono = "0.4.6"
