[package]
name = "rebuild_feed_to_json"
version = "0.1.0"
authors = ["Masayuki Sunahara <tamanishi@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0.106"
serde_json = "1.0.51"
serde_derive = "1.0.106"
rss = { version = "1.9.0", features = ["from_url"] }
scraper = "0.11.0"
chrono = "0.4.11"
